--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
+
 {
   "name": "mercadolivre-proxy",
   "version": "1.0.0",
-  "description": "Proxy para integração com a API do Mercado Livre",
+  "description": "Proxy para Mercado Livre",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "node-fetch": "^2.6.9"
+    "node-fetch": "^3.3.2"
   }
 }
